config/legacy7dcbad/install/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arcadectl-system
  labels:
    app.kubernetes.io/name: arcadectl
    app.kubernetes.io/part-of: arcadectl
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.37
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.37
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.37
